# agent-usage-desktop

./: .dockerignore  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README_CN.md  RELEASE.md  SECURITY.md  config.docker.yaml  config.yaml  docker-compose.local.yml  docker-compose.yml  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: desktop.yml  docker.yml
docs/todos/: skills-global-library.md
internal/collector/: claude.go  claude_process.go  claude_test.go  codex.go  codex_test.go  openclaw.go  openclaw_process.go  opencode.go
internal/config/: config.go
internal/configmanager/: adapter_claude.go  adapter_claude_test.go  adapter_codex.go  adapter_codex_test.go  adapter_json_tool.go  adapter_openclaw.go  adapter_openclaw_test.go  adapter_opencode.go  adapter_opencode_test.go  backup.go  backup_test.go  crypto.go  crypto_test.go  fileutil.go  fileutil_test.go  fileutil_unix.go  fileutil_windows.go  manager.go  manager_test.go  skills_cli.go  skills_cli_test.go  skills_inventory.go  skills_inventory_test.go  skills_overview.go  sync.go  sync_test.go  tool_detection.go  types.go
internal/pricing/: pricing.go
internal/server/: config_handlers.go  server.go  server_test.go
internal/storage/: api.go  configstore.go  configstore_test.go  (+2 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  sidecar.rs  tray.rs
(+35 files in other folders)
